k8s/base/nats-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  selector:
    app: nats
  ports:
    - protocol: TCP
      port: 4222
      name: nats-client
    - protocol: TCP
      port: 8222
      name: nats-monitoring
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  labels:
    app: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2.9.15-alpine
          command:
            - nats-server
            - -js
            - -DV
            - -m
            - "8222"
          readinessProbe:
            httpGet:
              path: /healthz?js-enabled-only=true
              port: 8222
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /healthz?js-enabled-only=true
              port: 8222
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 2
