k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /

# add in /etc/hosts -> 127.0.0.1 posts.com or $(minikube ip) posts.com
#  /newpostcomment
#  /query-posts
#  /newpost
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 3050
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 3050
